# interview

interview/: README.md  candidate_evaluation.md  pyproject.toml  resume_analysis.md
interview/src/interview/: main.py
interview/src/interview/crews/initial_interview/: README.md  pyproject.toml
interview/src/interview/crews/initial_interview/src/initial_interview/: crew.py
interview/src/interview/crews/initial_interview/src/initial_interview/config/: agents.yaml  tasks.yaml
interview/src/interview/crews/resume_review/: README.md  pyproject.toml
interview/src/interview/crews/resume_review/src/resume_review/: crew.py
interview/src/interview/crews/resume_review/src/resume_review/config/: agents.yaml  tasks.yaml
interview/src/interview/job_description/: software_engineer.txt
interview/src/interview/resumes/: strong_resume.txt  weak_resume.txt
