[tool.poetry]
name = "interview"
version = "0.1.0"
description = "interview using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.70.1,<1.0.0" }
asyncio = "*"

[tool.poetry.scripts]
interview = "interview.main:main"
run_flow = "interview.main:main"
plot_flow = "interview.main:plot"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
